--- a/index.html
+++ b/index.html
@@ -13,23 +13,27 @@
 <body>
   <div class="wrapper">
     <div class="card">
+      <img class="star" src="images/icon-star.svg" alt="">
       <h1 class="prompt">How did we do?</h1>
-      <p class="description">Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!</p>
-      <div class="buttons">
+      <p class="description">
+        Please let us know how we did with your support request. All feedback is appreciated 
+        to help us improve our offering!
+      </p>
+      <div class="rating-buttons">
         <button class="ratings">1</button>
         <button class="ratings">2</button>
         <button class="ratings">3</button>
         <button class="ratings">4</button>
         <button class="ratings">5</button>
       </div>
-      <button class="submit">Submit</button>
+      <button class="submit">SUBMIT</button>
     </div>
+    <div class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://github.com/theAntifly">Antti Nuotio</a>.
+   </div>
   </div>
 
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://github.com/theAntifly">Antti Nuotio</a>.
-  </div>
+
 </body>
 </html>
