--- a/index.html
+++ b/index.html
@@ -1,39 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
-  <script src="script.js"></script>
+
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+
   <title>Frontend Mentor | Interactive rating component</title>
 
 </head>
+
 <body>
   <div class="wrapper">
     <div class="card">
-      <img class="star" src="images/icon-star.svg" alt="">
-      <h1 class="prompt">How did we do?</h1>
-      <p class="description">
-        Please let us know how we did with your support request. All feedback is appreciated 
-        to help us improve our offering!
-      </p>
-      <div class="rating-buttons">
-        <button class="ratings">1</button>
-        <button class="ratings">2</button>
-        <button class="ratings">3</button>
-        <button class="ratings">4</button>
-        <button class="ratings">5</button>
+      <div class="ratings-screen">
+        <div class="star-container">
+          <img class="star" src="images/icon-star.svg" alt="">
+        </div>
+        <h1 class="prompt">How did we do?</h1>
+        <p class="description">
+          Please let us know how we did with your support request. All feedback is appreciated
+          to help us improve our offering!
+        </p>
+        <div class="rating-buttons">
+          <button class="ratings">1</button>
+          <button class="ratings">2</button>
+          <button class="ratings">3</button>
+          <button class="ratings">4</button>
+          <button class="ratings">5</button>
+        </div>
+        <button class="submit">SUBMIT</button>
       </div>
-      <button class="submit">SUBMIT</button>
+      <div class="thank-you-screen">
+        <div class="img-container">
+          <img class="thank-you" src="images/illustration-thank-you.svg" alt="">
+        </div>
+        <span class="rating-choice">You selected
+          <!-- Add rating here --> out of 5
+        </span>
+        <h1 class="prompt">Thank you!</h1>
+        <p class="description">
+          We appreciate you taking the time to give a rating. If you ever need more support,
+          don’t hesitate to get in touch!
+        </p>
+      </div>
     </div>
     <div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="https://github.com/theAntifly">Antti Nuotio</a>.
-   </div>
+    </div>
   </div>
 
 
 </body>
+
+<script src="script.js"></script>
+
 </html>
