--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <img class="thank-you" src="images/illustration-thank-you.svg" alt="">
         </div>
         <span class="rating-choice">You selected
-          <!-- Add rating here --> out of 5
+          x out of 5
         </span>
         <h1 class="prompt">Thank you!</h1>
         <p class="description">
